[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/sound/fx/pick_up_1.ogg" type="AudioStream" id=1]
[ext_resource path="res://src/items/graphics/apple_01.png" type="Texture" id=2]
[ext_resource path="res://src/items/apple.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 17.0294

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Apple:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -20.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "fly_away"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Apple:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Apple:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ), Vector2( 0.5, 0.5 ), Vector2( 0.01, 0.01 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hanging"
length = 2.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Apple:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.4, 0.9, 1.6, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -20.0, 20.0, 0.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Apple:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1.6, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, 10 ), Vector2( 0, 0 ) ]
}

[node name="Apple" type="Area2D"]
collision_layer = 4
script = ExtResource( 5 )

[node name="Apple" type="Sprite" parent="."]
rotation = -0.349066
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/fly_away = SubResource( 4 )
anims/hanging = SubResource( 3 )

[node name="SoundGrabApple" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Apple_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
